// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ExternalLink should render external link 1`] = `
<a
  className="typography__Link-sc-1yq3b4j-5 jdVvmw"
  href="http://localhost"
>
  <test-file-stub
    class="ExternalLink__PositionedLinkIcon-sc-1in9m5g-0 gFuteV"
  />
  <b
    className="typography__Bold-sc-1yq3b4j-6 hXEqNj"
  >
    Teksti
  </b>
</a>
`;

exports[`ExternalLink should render external link that targets new tab 1`] = `
<a
  className="typography__Link-sc-1yq3b4j-5 jdVvmw"
  href="http://localhost"
  target="_blank"
>
  <test-file-stub
    class="ExternalLink__PositionedLinkIcon-sc-1in9m5g-0 gFuteV"
  />
  <b
    className="typography__Bold-sc-1yq3b4j-6 hXEqNj"
  >
    Teksti
  </b>
</a>
`;

exports[`ExternalLink should render link without explicit text 1`] = `
<a
  className="typography__Link-sc-1yq3b4j-5 jdVvmw"
  href="http://localhost"
>
  <test-file-stub
    class="ExternalLink__PositionedLinkIcon-sc-1in9m5g-0 gFuteV"
  />
  <b
    className="typography__Bold-sc-1yq3b4j-6 hXEqNj"
  >
    http://localhost
  </b>
</a>
`;
